# LightEditor

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  DeveloperDocumentation.md  README.md
.claude/skills/: gpui-async  gpui-context  gpui-event  gpui-layout-and-style  tree-sitter  webgpu-specs
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/adr/: adr-001-rust-language.md  adr-002-custom-ui-framework.md  adr-003-gpu-driven-rendering.md  adr-004-ropey-text-buffer.md  adr-005-no-web-technology.md  adr-006-local-embeddings-default.md  adr-007-protocols-lsp-dap-mcp.md  adr-008-no-plugin-system-v1.md  adr-009-config-format-toml.md  adr-010-no-modal-editing.md  adr-011-license-apache-2-0.md
docs/research/: m0-spike-results.md
editor/: CHANGELOG.md  Cargo.toml  README.md  release.toml
editor/crates/ai/agent/: README.md
editor/crates/ai/chat/: README.md
editor/crates/ai/completion/: README.md
editor/crates/ai/mcp/: README.md
editor/crates/ai/providers/: README.md
editor/crates/ai/rag/: README.md
editor/crates/app/: Cargo.toml  README.md
editor/crates/app/src/: document.rs  file_tree.rs  find.rs  find_in_files.rs  flutter.rs  git.rs  lsp.rs  main.rs  palette.rs  scripts.rs  terminal.rs  terminal_palette.rs  vscode_discover.rs
editor/crates/buffer/: Cargo.toml  README.md
editor/crates/buffer/src/: buffer.rs  delta.rs  lib.rs  line_ending.rs  position.rs
editor/crates/config/: Cargo.toml  README.md
editor/crates/config/src/: lib.rs  theme.rs  vscode_settings.rs  vscode_theme.rs
editor/crates/dap-client/: README.md
editor/crates/editor-core/: Cargo.toml  README.md
editor/crates/editor-core/src/: editor.rs  lib.rs  selection.rs  selection_set.rs  undo.rs
editor/crates/git/: README.md
editor/crates/lsp-client/: Cargo.toml  README.md
editor/crates/lsp-client/src/: client.rs  jsonrpc.rs  lib.rs
editor/crates/syntax/: Cargo.toml  README.md
editor/crates/syntax/src/: lib.rs
editor/crates/terminal/: README.md
editor/crates/theme/: README.md
editor/crates/ui/render/: Cargo.toml  README.md
editor/crates/ui/render/src/: lib.rs  quad_renderer.rs
editor/crates/ui/render/src/shaders/: quad.wgsl
editor/crates/ui/scene/: Cargo.toml  README.md
editor/crates/ui/scene/src/: geometry.rs  lib.rs  scene.rs
editor/crates/ui/text/: Cargo.toml  README.md
editor/crates/ui/text/src/: lib.rs
editor/crates/ui/widgets/: README.md
editor/crates/ui/window/: README.md
editor/crates/workspace/: README.md
editor/examples/projects/flutter_project/ios/Runner.xcodeproj/: project.pbxproj
editor/examples/projects/flutter_project/lib/: main.dart
editor/examples/projects/node_project/: index.js  package.json
editor/examples/themes/: README.md  gruvbox-dark.toml  monokai.toml  nord.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
examples/: SaveFromApp  example.txt  file.txt
meta/: changelog.md  open-questions.md  tools-cost.md
tasks/: milestone-0-spike.md  milestone-1-editable.md  milestone-2-smart.md  milestone-3-developable.md  milestone-4-ai-baseline.md  milestone-5-ai-power.md  milestone-6-agentic.md  milestone-7-production.md
