# Cargo workspace for the code editor
# Structure mirrors spec doc section 7
#
# NOTE: Members are commented out. Uncomment each as it gets initialized
# by Claude Code via `cargo new --lib crates/<name>` (or --bin for app).
# This prevents `cargo build` from failing on empty crate folders.

[workspace]
resolver = "2"
members = [
    # ── UI framework ──────────────────────────────────────
    # "crates/ui/window",      # winit wrapper
    "crates/ui/render",        # wgpu pipeline
    "crates/ui/text",          # text shaping + rendering
    # "crates/ui/scene",       # scene graph
    # "crates/ui/widgets",     # widget primitives

    # ── Core editor ───────────────────────────────────────
    "crates/buffer",           # text buffer (ropey)
    "crates/editor-core",      # editing operations
    # "crates/syntax",         # tree-sitter
    # "crates/lsp-client",     # LSP protocol
    # "crates/dap-client",     # DAP protocol
    # "crates/git",            # git integration (git2)
    # "crates/terminal",       # terminal emulator (alacritty_terminal)

    # ── AI ────────────────────────────────────────────────
    # "crates/ai/providers",   # LLM providers
    # "crates/ai/completion",  # inline completion (ghost text)
    # "crates/ai/chat",        # chat sidebar
    # "crates/ai/agent",       # agent loop
    # "crates/ai/rag",         # codebase indexing
    # "crates/ai/mcp",         # MCP client

    # ── Application ───────────────────────────────────────
    # "crates/config",         # settings + keymaps
    # "crates/workspace",      # project management
    # "crates/theme",          # theme engine
    "crates/app",              # main binary (entry point)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"      # ADR-011
rust-version = "1.75"       # adjust per Claude Code recommendation

# Shared dependencies pinned here when consumed by multiple crates.
# Add as crates start needing them; M0 (spike) initialized winit/wgpu/glyphon/
# cosmic-text/pollster/log/env_logger.
[workspace.dependencies]
# Internal crates (path deps).
editor-buffer = { path = "crates/buffer" }
editor-core = { path = "crates/editor-core" }
editor-ui-render = { path = "crates/ui/render" }
editor-ui-text = { path = "crates/ui/text" }
# Third-party.
winit = "0.30"
wgpu = "29"
cosmic-text = "0.18"
glyphon = "0.11"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
ropey = "1.6"
unicode-segmentation = "1"
# tree-sitter = "0.22"
# tokio = { version = "1", features = ["full"] }
# lsp-types = "0.95"
# git2 = "0.18"
# nucleo = "0.5"
# reqwest = { version = "0.12", features = ["json", "stream"] }
# eventsource-stream = "0.2"
# keyring = "3"
# arboard = "3"
# fastembed = "3"
# lancedb = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1               # better latency during development
