[package]
name = "editor-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
editor-config = { workspace = true }
editor-core = { workspace = true }
editor-ui-render = { workspace = true }
editor-ui-scene = { workspace = true }
editor-ui-text = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rfd = { workspace = true }
nucleo-matcher = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
arboard = { workspace = true }
editor-syntax = { workspace = true }
editor-lsp-client = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
