[package]
name = "editor-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-dart = { workspace = true }
