[package]
name = "editor-ui-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-ui-scene = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
